# mag_diser_model

./: .dockerignore  .gitignore  CLEANED.md  CLEANUP.md  Dockerfile  README.md  README_REFACTORING.md  REFACTORING.md  SUMMARY.md  Taskfile.yml  analyze_experiment.py  example.env  inference_last_distributions.py  pyproject.toml  ref.txt  render_best_model_trajectory.py  resolve_results.sh  rl_training_best_practices.md  train_sb3.py  train_single_agent.py
agents/: ddpg_agent.py  drone.py
boot/: mount.sh
callbacks/: __init__.py  custom_callbacks.py
config/: drone_config.py  env_config.py  train_config.py  version.py
env/: drone_env.py  drone_env_state_wrapper.py  drone_env_wrapper.py
inference/: get_last.py  load_model.py  test_loop.py
inference/server/: ws.py
networks/: actor.py  critic.py  maddpg_global_critic.py
notebooks/: Untitled.ipynb  obstacles.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  obstacles-checkpoint.ipynb
results/2025_06_01_1602_PENALTY_TIMER_obs_closing_penalty_v2/: description.txt  (+2 more)
tests/: conftest.py  drone_move.py  maddpg_critic.py  test_barrier_func.py  test_collision_and_no_teleport.py  test_drone_motion.py  test_enabled_features.py  test_env.py  test_env_obs.py  test_generation_reproducibility.py  test_inference_matrix_subset.py  test_observation_encoding.py  test_reward_and_truncation.py  test_smoke_env_step.py  test_target_fleeing.py  test_tcp_server.py
utils/: analyze_training_log.py  barrier.py  checks.py  db.py  device_support.py  drone_view.py  episode_saver.py  episode_train_policy.py  generation.py  per_replay_buffer.py  replay_buffer.py  save.py  target_strategies.py  time_logger.py  warmup.py
(+3 files in other folders)
