python = "^3.11"

[project]
name = "model"
version = "0.1.0"
description = ""
authors = [
    {name = "tvblackman1",email = "vbif.misha2012@yandex.ru"}
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "torchaudio (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pettingzoo (>=1.25.0,<2.0.0)",
    "supersuit (>=3.10.0,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

