[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["tvblackman1 <vbif.misha2012@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.7.0,<3.0.0"
numpy = ">=2.2.5,<3.0.0"
gymnasium = ">=1.1.1,<2.0.0"
matplotlib = ">=3.10.1,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
pyyaml = ">=6.0.2,<7.0.0"
pandas = ">=2.2.3,<3.0.0"
scipy = "^1.16.0"
duckdb = "^1.3.2"
stable-baselines3 = "^2.3.0"
tensorboard = "^2.17.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
notebook = "^7.4.4"
